<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".OrganikArticleActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/OrganikArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backbt"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:contentDescription="Back"
            android:focusable="true"
            android:onClick="goBackToMainActivity"
            android:src="@drawable/backbt"
            app:layout_constraintTop_toTopOf="@+id/OrganikArticle"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Artikel Kategori Sampah\nBisa Terurai(Organik)"
            android:fontFamily="@font/semibold"
            android:textColor="@color/text1"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/backbt"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="247dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/imgorganik"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <TextView
            android:id="@+id/jenis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:fontFamily="@font/medium"
            android:textColor="@color/text1"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

        <TextView
            android:id="@+id/isi_pertama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contoh sampah organik antara lain:"
            android:fontFamily="@font/medium"
            android:textColor="@color/text1"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/jenis"/>

        <TextView
            android:id="@+id/isi_contoh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:textColor="@color/text1"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/isi_pertama"/>

        <TextView
            android:id="@+id/isi_kedua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:fontFamily="@font/medium"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/isi_contoh"/>

        <TextView
            android:id="@+id/isi_ketiga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            android:fontFamily="@font/medium"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/isi_kedua"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>